--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -4,10 +4,6 @@ import ExperienceAccordion from '@/components/ExperienceAccordion';
 import SkillsSection from '@/components/SkillsSection.astro';
 import Primary from '@/layouts/Primary.astro';
 
-export const metadata: Metadata = {
-	title: "Resume - Alex's Website",
-};
-
 // const Highlights = ({ highlights }: { highlights: ResumeHighlight[] }) => {
 // 	//This is kinda hacky, but I can't think of a better solution
 // 	const resolveIcon = (iconName: string) => {
@@ -48,20 +44,19 @@ export const metadata: Metadata = {
 // 		</Grid>
 // 	);
 // };
-
 ---
 
-<Primary>
+<Primary title="Resume">
 	<div class='m-4'>
 		<h4 class='text-4xl underline'>Skills</h4>
 		<SkillsSection />
 	</div>
 	<div class='m-4'>
 		<h4 class='text-4xl underline'>Education</h4>
-		<EducationAccordion client:load/>
+		<EducationAccordion client:load />
 	</div>
 	<div class='m-4'>
 		<h4 class='text-4xl underline'>Experience</h4>
-		<ExperienceAccordion client:load/>
+		<ExperienceAccordion client:load />
 	</div>
 </Primary>
