--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,5 +1,5 @@
 ---
-import {MoonStar, Sun} from 'lucide-react';
+import {MoonStar, Sun} from '@lucide/astro';
 import {Button} from './ui/button';
 ---
 
@@ -19,7 +19,7 @@ import {Button} from './ui/button';
 	}
 </style>
 
-<script  is:inline>
+<script is:inline>
 	const theme = (() => {
 		const localStorageTheme = localStorage?.getItem('theme') ?? '';
 		if (['dark', 'light'].includes(localStorageTheme)) {
@@ -38,16 +38,6 @@ import {Button} from './ui/button';
 	}
 
 	window.localStorage.setItem('theme', theme);
-
-	const handleToggleClick = () => {
-		const element = document.documentElement;
-		element.classList.toggle('dark');
-
-		const isDark = element.classList.contains('dark');
-		localStorage.setItem('theme', isDark ? 'dark' : 'light');
-	};
-
-	document.getElementById('themeToggle')?.addEventListener('click', handleToggleClick);
 </script>
 
 <button id='themeToggle'>
@@ -58,3 +48,15 @@ import {Button} from './ui/button';
 		<Sun class='block dark:hidden' />
 	</div>
 </button>
+
+<script is:inline>
+	const handleToggleClick = () => {
+		const element = document.documentElement;
+		element.classList.toggle('dark');
+
+		const isDark = element.classList.contains('dark');
+		localStorage.setItem('theme', isDark ? 'dark' : 'light');
+	};
+
+	document.getElementById('themeToggle')?.addEventListener('click', handleToggleClick);
+</script>
