--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -11,7 +11,7 @@ const cc_xmlns = {
 
 <footer class='mx-auto mb-4 block'>
 	<Card className='flex'>
-		<CardContent className='mx-auto mt-4 flex text-wrap'>
+		<CardContent className='mx-auto mt-4 flex text-wrap text-4xl md:text-xl'>
 <pre class='text-wrap text-center'>Made by Alex &quot;FaceFTW&quot; Westerman &copy; 2021-{new Date().getFullYear()} All Rights Reserved.
 Source code for this website is licensed under the MIT License
 <p class='prose prose-green dark:prose-invert inline text-wrap font-mono' {...cc_xmlns}><span property='dct:title' class='font-mono'>The content of the "ref_cycle" blog</span>&nbsp;is licensed under&nbsp;<a href='https://creativecommons.org/licenses/by-nc-sa/4.0' target='_blank' rel='license noopener noreferrer' class='inline-flex justify-center font-mono'>CC BY-NC-SA 4.0</a></p>
