--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,55 +1,14 @@
 ---
-import EducationAccordion from '@/components/EducationAccordion';
-import ExperienceAccordion from '@/components/ExperienceAccordion';
-import SkillsSection from '@/components/SkillsSection.astro';
 import Primary from '@/layouts/Primary.astro';
-import type {Skill} from '@/lib/types';
+import type {Skill, Education, ProfessionalExperience} from '@/lib/types';
 import resumeData from '@/content/resume.json';
 import Badge from '@/components/Badge.astro';
+import Accordion from '@/components/accordion/Accordion.astro';
+import AccordionItem from '@/components/accordion/AccordionItem.astro';
 
-// biome-ignore lint/correctness/noUnusedVariables: <explanation>
 const skills: Skill[] = resumeData.skills;
-
-// const Highlights = ({ highlights }: { highlights: ResumeHighlight[] }) => {
-// 	//This is kinda hacky, but I can't think of a better solution
-// 	const resolveIcon = (iconName: string) => {
-// 		switch (iconName) {
-// 			case 'fa-book':
-// 				return <FaBook />;
-// 			case 'fa-github':
-// 				return <FaGithub />;
-// 			case 'fa-heart':
-// 				return <FaHeart />;
-// 		}
-// 	};
-
-// 	return (
-// 		<Grid container spacing={3} sx={{ padding: { sm: '2rem 5rem' } }} alignItems='stretch'>
-// 			{highlights.map((highlight, index) => (
-// 				<Grid item xs={12} lg={4} key={index} sx={{ display: 'flex' }}>
-// 					<Paper
-// 						elevation={3}
-// 						sx={{
-// 							display: 'flex',
-// 							justifyContent: 'center',
-// 							padding: '1rem',
-// 							flexGrow: 1,
-// 						}}>
-// 						<Box>
-// 							<Icon sx={{ display: 'block', fontSize: '80px', marginRight: '1rem' }}>
-// 								{resolveIcon(highlight.icon)}
-// 							</Icon>
-// 						</Box>
-// 						<Box>
-// 							<Typography variant='h4'>{highlight.stat}</Typography>
-// 							<Typography variant='h6'>{highlight.statDescription}</Typography>
-// 						</Box>
-// 					</Paper>
-// 				</Grid>
-// 			))}
-// 		</Grid>
-// 	);
-// };
+const education: Education[] = resumeData.education;
+const experience: ProfessionalExperience[] = resumeData.experience;
 ---
 
 <Primary title='Resume'>
@@ -82,17 +41,71 @@ const skills: Skill[] = resumeData.skills;
 							'';
 					}
 
-					return <Badge class={skill_class} text={skill.name} />;
+					return <Badge id={skill.name} class={skill_class} text={skill.name} />;
 				})
 			}
 		</div>
 	</div>
 	<div class='m-4'>
-		<h4 class='text-4xl underline'>Education</h4>
-		<EducationAccordion client:load />
+		<h4 class='text-4xl underline'>Experience</h4>
+		<Accordion>
+			{
+				experience.map((exp, index) => (
+					<AccordionItem title={`${exp.position} - ${exp.name}`}>
+						<div class='mb-6 px-6'>
+							<p hidden={!exp.location}>Company Location: {exp.location}</p>
+							<p hidden={!exp.timeEmployed}>Employed from {exp.timeEmployed}</p>
+							<br />
+							<h5 class='text-xl underline'>Responsibilities:</h5>
+							<ul class='list-disc'>
+								{exp.responsibilities.map((responsibility) => (
+									<li>{responsibility}</li>
+								))}
+							</ul>
+						</div>
+					</AccordionItem>
+				))
+			}
+		</Accordion>
 	</div>
 	<div class='m-4'>
-		<h4 class='text-4xl underline'>Experience</h4>
-		<ExperienceAccordion client:load />
+		<h4 class='text-4xl underline'>Education</h4>
+		<Accordion>
+			{
+				education.map((edu) => {
+					return (
+						<AccordionItem title={`${edu.name} - ${edu.graduationDate}`}>
+							<div class='mb-6 px-6 pt-0 pb-4'>
+								<h6 class='text-xl underline'>Field of Study:</h6>
+								<p>
+									{edu.degree?.join(', ') +
+										(edu.degreeAddendum ? ` (${edu.degreeAddendum})` : '')}
+								</p>
+								<p hidden={!edu.gpa}>
+									<strong>Unweighted GPA: </strong>
+									{edu.gpa?.unweighted},<strong> Weighted GPA: </strong>
+									{edu.gpa?.weighted}
+								</p>
+								<br />
+								<h6 class='text-xl underline'>Relevant Courses</h6>
+								<ul class='list-disc'>
+									{edu.relCoursework.map((course) => (
+										<li>{course}</li>
+									))}
+								</ul>
+								<div hidden={!edu.propCoursework}>
+									<h6 class='text-xl underline'>Proposed Courses</h6>
+									<ul class='list-disc'>
+										{edu.propCoursework?.map((course) => (
+											<li>{course}</li>
+										))}
+									</ul>
+								</div>
+							</div>
+						</AccordionItem>
+					);
+				})
+			}
+		</Accordion>
 	</div>
 </Primary>
