--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
     <head>
         <title>{{ title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
+        <link rel="stylesheet" type="text/css" href="assets/main.css"/>
         <script>
             // Remove this script if you don"t need the dark mode toggle On page load or when changing themes, best to add inline in
             // `head` to avoid FOUC
@@ -40,20 +40,56 @@
                     .theme = "dark"
             }
         };
-        {# const forgetPref = function () {
-            localStorage
-                .removeItem("theme")
-                window
-                .location
-                .reload()
-        } #}
+        {
+            # const forgetPref = function () {
+                localStorage
+                    .removeItem("theme")
+                    window
+                    .location
+                    .reload()
+            }
+            #
+        }
         </script>
     </head>
     <body class="antialiased rubik.className">
         <div classname="flex min-h-screen flex-col">
-            <header classname="z-40 bg-background py-2 md:px-40 md:py-6">
-                <div classname="flex h-10 flex-row justify-between ">
-                    <span classname="w-max-10"/>
+            <header
+                class="header"
+                x-data="{ open: false }"
+                x-transition
+                style="background-color: {{ navigation.header.background_color }}; color: {{ navigation.header.color }}">
+                <div class="header__container">
+                    <nav class="header__nav">
+                        <a class="header__logo-link" href={{ navigation.header.logo_url }}>
+                            <img class="header__logo-image" src={{ navigation.header.logo }} alt={{ navigation.header.logo_alt }}/>
+                        </a>
+                        <button class="hamburger" @click="open = ! open">
+                            <svg height="16" width="24" xmlns="http://www.w3.org/2000/svg">
+                                <defs>
+                                    <path d="M0 16h24v-2.667H0V16zm0-6.667h24V6.667H0v2.666zM0 0v2.667h24V0H0z" id="a"></path>
+                                </defs>
+                                <g fill="none" fill-rule="evenodd">
+                                    <mask fill="#fff" id="b">
+                                        <use href="#a"></use>
+                                    </mask>
+                                    <use fill="#000" fill-rule="nonzero" href="#a"></use>
+                                    <g mask="url(#b)">
+                                        <path d="M-4-8h32v32H-4z" fill="#034AD8"></path>
+                                    </g>
+                                </g>
+                            </svg>
+                        </button>
+                        <ul class="header__nav-links" x-show="open" x-transition @click.outside="open = false">
+                            {% for link in navigation.header.links %}
+                                <li class="header__nav-item">
+                                    <a class="header__nav-link" href={{ link.link }}>
+                                        {{ link.text }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </nav>
                 </div>
             </header>
             <main classname="container mx-auto flex flex-col md:w-[80%]">
