--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,54 +5,238 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
         <script>
-            {% include "script/darkmode.js" %}</script>
+            {% include "script/darkmode.js" %}
+        </script>
     </head>
     <body class="antialiased rubik.className">
-        <div classname="flex min-h-screen flex-col">
-            <header class="header" x-data="{ open: false }" x-transition>
-                <div class="flex gap-16 md:gap-10">
-                    <nav class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center">
-                        <button class="hamburger" @click="open = ! open">
-                            <svg height="15" width="24" xmlns="http://www.w3.org/2000/svg">
-                                <defs>
-                                    <path d="M-1 16h24v-2.667H0V16zm0-6.667h24V6.667H0v2.666zM0 0v2.667h24V0H0z" id="a"></path>
-                                </defs>
-                                <g fill="none" fill-rule="evenodd">
-                                    <mask fill="#fff" id="b">
-                                        <use href="#a"></use>
-                                    </mask>
-                                    <use fill="#037777777777" fill-rule="nonzero" href="#a"></use>
-                                    <g mask="url(#b)">
-                                        <path d="M-5-8h32v32H-4z" fill="#034AD8"></path>
-                                    </g>
-                                </g>
-                            </svg>
-                        </button>
-                        <a class=" inline-block font-bold  text-lg transition-colors hover:text-foreground/80 sm:text-sm " href={{ navigation.header.logo_url }}>
-                            Alex Westerman
+        <div class="flex min-h-screen flex-col">
+            <header class="z-40 bg-background py-2 md:px-40 md:py-6">
+                <div class="flex h-10 flex-row justify-between ">
+                    <div class="flex gap-16 md:gap-10">
+                        <a class="hidden items-center space-x-2 md:flex" href="/">
+                            <span class="hidden font-bold sm:inline-block">Alex Westerman</span>
                         </a>
-                        <ul
-                            class=" hidden md:flex group flex-1 list-none items-center justify-center gap-6 md:gap-10"
-                            x-show="open"
-                            x-transition
-                            @click.outside="open = false">
-                            {% for link in navigation.header.links %}
-                                <li class="relative">
-                                    <a class="flex font-medium text-lg transition-colors hover:text-foreground/80 sm:text-sm" href={{ link.link }}>
-                                        {{ link.text }}
+                        <nav
+                            aria-label="Main"
+                            data-orientation="horizontal"
+                            dir="ltr"
+                            data-slot="navigation-menu"
+                            data-viewport="true"
+                            class="group/navigation-menu relative max-w-max flex-1 items-center justify-center hidden md:flex">
+                            <div style="position:relative">
+                                <ul
+                                    data-orientation="horizontal"
+                                    data-slot="navigation-menu-list"
+                                    class="group flex flex-1 list-none items-center justify-center gap-6 md:gap-10"
+                                    dir="ltr">
+                                    <li data-slot="navigation-menu-item" class="relative">
+                                        <a class="flex font-medium text-lg transition-colors hover:text-foreground/80 sm:text-sm" href="/">
+                                            <span>Home</span>
+                                        </a>
+                                    </li>
+                                    <li data-slot="navigation-menu-item" class="relative">
+                                        <a class="flex font-medium text-lg transition-colors hover:text-foreground/80 sm:text-sm" href="/projects">
+                                            <span>Projects</span>
+                                        </a>
+                                    </li>
+                                    <li data-slot="navigation-menu-item" class="relative">
+                                        <a class="flex font-medium text-lg transition-colors hover:text-foreground/80 sm:text-sm" href="/resume">
+                                            <span>Resume</span>
+                                        </a>
+                                    </li>
+                                    <li data-slot="navigation-menu-item" class="relative">
+                                        <a class="flex font-medium text-lg transition-colors hover:text-foreground/80 sm:text-sm" href="/blog">
+                                            <span>Blog</span>
+                                        </a>
+                                    </li>
+                                    <li data-slot="navigation-menu-item" class="relative">
+                                        <a class="flex font-medium text-lg transition-colors hover:text-foreground/80 sm:text-sm" href="/about">
+                                            <span>About</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="absolute top-full left-0 isolate z-50 flex justify-center"></div>
+                        </nav>
+                        <button
+                            data-slot="button"
+                            class="justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none
+                                disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0
+                                [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]
+                                aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent
+                                hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 ml-4 flex items-center space-x-2
+                                md:hidden">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewbox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-menu"
+                                aria-hidden="true">
+                                <path d="M4 12h16"></path>
+                                <path d="M4 18h16"></path>
+                                <path d="M4 6h16"></path>
+                            </svg>
+                            <span class="font-bold">Alex Westerman</span>
+                        </button>
+                        <div class="slide-in-from-bottom-80 fixed inset-0 top-10 z-50 grid h-[calc(100vh-4rem)] animate-in grid-flow-row auto-rows-max
+                                overflow-auto p-6 pb-32 shadow-md md:hidden">
+                            <div class="relative z-20 grid gap-6 rounded-md bg-popover p-4 text-popover-foreground shadow-lg">
+                                <nav class="grid grid-flow-row auto-rows-max text-sm">
+                                    <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            viewbox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="lucide lucide-house"
+                                            aria-hidden="true">
+                                            <path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"></path>
+                                            <path d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                        </svg>
+                                        <span>Home</span>
                                     </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </nav>
+                                    <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/projects.njk">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            viewbox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="lucide lucide-square-dashed-bottom-code"
+                                            aria-hidden="true">
+                                            <path d="M10 9.5 8 12l2 2.5"></path>
+                                            <path d="M14 21h1"></path>
+                                            <path d="m14 9.5 2 2.5-2 2.5"></path>
+                                            <path d="M5 21a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2"></path>
+                                            <path d="M9 21h1"></path>
+                                        </svg>
+                                        <span>Projects</span>
+                                    </a>
+                                    <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/resume">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            viewbox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="lucide lucide-scroll-text"
+                                            aria-hidden="true">
+                                            <path d="M15 12h-5"></path>
+                                            <path d="M15 8h-5"></path>
+                                            <path d="M19 17V5a2 2 0 0 0-2-2H4"></path>
+                                            <path d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3"></path>
+                                        </svg>
+                                        <span>Resume</span>
+                                    </a>
+                                    <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/blog">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            viewbox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="lucide lucide-rss"
+                                            aria-hidden="true">
+                                            <path d="M4 11a9 9 0 0 1 9 9"></path>
+                                            <path d="M4 4a16 16 0 0 1 16 16"></path>
+                                            <circle cx="5" cy="19" r="1"></circle>
+                                        </svg>
+                                        <span>Blog</span>
+                                    </a>
+                                    <a class="flex w-full items-center gap-2 rounded-md p-2 font-medium text-sm hover:underline" href="/about">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            viewbox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="lucide lucide-circle-user"
+                                            aria-hidden="true">
+                                            <circle cx="12" cy="12" r="10"></circle>
+                                            <circle cx="12" cy="10" r="3"></circle>
+                                            <path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"></path>
+                                        </svg>
+                                        <span>About</span>
+                                    </a>
+                                </nav>
+                            </div>
+                        </div>
+                        <span class="grow"></span>
+                        <div class="flex pr-2">
+                            <button
+                                data-slot="button"
+                                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all
+                                    disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4
+                                    shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]
+                                    aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary
+                                    underline-offset-4 hover:underline h-9 px-4 py-2 has-[>svg]:px-3"
+                                aria-label="Change Light/Dark Mode">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="24"
+                                    height="24"
+                                    viewbox="0 0 24 24"
+                                    fill="none"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    class="lucide lucide-moon-star"
+                                    aria-hidden="true">
+                                    <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9"></path>
+                                    <path d="M20 3v4"></path>
+                                    <path d="M22 5h-4"></path>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <span class="w-max-10"></span>
                 </div>
             </header>
-            <main classname="container mx-auto flex flex-col md:w-[80%]">
-                <div classname="container mx-auto px-5">{{ content | safe }}</div>
-                <div
-                    classname="flex items-center">{# <SiteFooter/> #}
-                </div>
+            <main class="container mx-auto flex flex-col md:w-[80%]">
+                {{ content | safe }}
             </main>
+            <div class="flex items-center mx-auto md:w-[80%]">
+                <footer class="mx-auto mb-4 block">
+                    <div data-slot="card" class="bg-card text-card-foreground flex-col gap-6 rounded-xl border py-6 shadow-sm flex">
+                        <div data-slot="card-content" class="px-6 mx-auto mt-4 flex text-wrap">
+                            <pre class="text-wrap text-center">Made by Alex "FaceFTW" Westerman © 2021-2025 All Rights Reserved.
+<!-- -->Source code for this website is licensed under the MIT License
+<p class="prose prose-green dark:prose-invert inline text-wrap" xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><span property="dct:title" class="">The content of the "ref_cycle" blog</span> <!-- -->is licensed under<!-- --> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0" target="_blank" rel="license noopener noreferrer" class="inline-flex justify-center">CC BY-NC-SA 4.0</a></p>
+<!-- -->All projects mentioned are subject to their specific licenses and copyrights as designated by their owners<!-- -->
+
+<a class="text-gray-500 text-sm decoration-muted" href="/funny">super secret link</a></pre>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </div>
     </body>
 </html>
