--- a/src/projects.njk
+++ b/src/projects.njk
@@ -64,7 +64,7 @@ eleventyNavigation:
                                                                         aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border
                                                                         bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input
                                                                         dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" aria-label="{{ link.linkDesc }}">
-                                    {% include 'icons/app_window.njk' %}
+                                    {% include 'icons/link.njk' %}
                                     <span>{{ link.linkDesc }}</span>
                                 </button>
                                 <script>document.getElementById("{{project.projectName}}{{link.linkType}}").onclick=()=>window.open("{{link.linkURL}}")</script>
