Improved Resume + Working Font

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
         <script>
             {% include "layout_preinit.js" %}</script>
     </head>
-    <body class="antialiased rubik.className">
+    <body class="antialiased font-rubik">
         <div class="flex min-h-screen flex-col">
             <header class="z-40 bg-background py-2 md:px-40 md:py-6">
                 <div class="flex h-10 flex-row justify-between ">
