--- a/src/projects.njk
+++ b/src/projects.njk
@@ -4,6 +4,8 @@ eleventyNavigation:
     key: projects
 ---
 
+{% set badge_style = "inline-flex items-center justify-center font-medium rounded-md border px-2 py-0.5 text-xs w-fit whitespace-nowrap shrink-0 gap-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground" %}
+{% set button_style = "inline-flex items-center justify-center font-medium gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" %}
 <h1 class="text-2xl">Projects</h1>
 <div class="justify-content m-4 flex items-center">
     <div class="grid grow grid-cols-1 gap-4 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3">
@@ -21,13 +23,7 @@ eleventyNavigation:
                 <div data-slot="card-content" class="px-6">
                     <div class="mb-4 space-x-1">
                         {% for projectTag in project.projectTags %}
-                            <span
-                                data-slot="badge"
-                                class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap
-                                    shrink-0 [&amp;>svg]:size-3 gap-1 [&amp;>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50
-                                    focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40
-                                    aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary
-                                    text-primary-foreground [a&amp;]:hover:bg-primary/90">
+                            <span class="{{ badge_style }}">
                                 {{ projectTag }}</span>
                         {% endfor %}
                     </div>
@@ -36,38 +32,29 @@ eleventyNavigation:
                     <div data-slot="card-footer" class="items-center px-6 [.border-t]:pt-6 flex gap-4">
                         {% for link in project.projectLinks %}
                             {% if link.linkType ==="github" %}
-                                <button id="{{ project.projectName }}{{ link.linkType }}" data-slot="button" class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all
-                                                                        disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4
-                                                                        shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]
-                                                                        aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border
-                                                                        bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input
-                                                                        dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" aria-label="GitHub Repository">
+                                <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="GitHub Repository">
                                     {% include 'icons/code_xml.njk' %}
                                     <span>Source Code</span>
                                 </button>
-                                <script>document.getElementById("{{project.projectName}}{{link.linkType}}").onclick=()=>window.open("{{link.linkURL}}")</script>
+                                <script>
+                                    document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")
+                                </script>
                             {% elif link.linkType==="demo" %}
-                                <button id="{{ project.projectName }}{{ link.linkType }}" data-slot="button" class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all
-                                                                        disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4
-                                                                        shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]
-                                                                        aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border
-                                                                        bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input
-                                                                        dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" aria-label="Online Demo">
+                                <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="Online Demo">
                                     {% include 'icons/app_window.njk' %}
                                     <span>Demo</span>
-                                <script>document.getElementById("{{project.projectName}}{{link.linkType}}").onclick=()=>window.open("{{link.linkURL}}")</script>
+                                    <script>
+                                        document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")
+                                    </script>
                                 </button>
                             {% elif link.linkType==="misc" %}
-                                <button id="{{ project.projectName }}{{ link.linkType }}" data-slot="button" class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all
-                                                                        disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4
-                                                                        shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]
-                                                                        aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border
-                                                                        bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input
-                                                                        dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3" aria-label="{{ link.linkDesc }}">
+                                <button id="{{ link.linkType }}{{ project.projectId }}" class="{{ button_style }}" aria-label="{{ link.linkDesc }}">
                                     {% include 'icons/link.njk' %}
                                     <span>{{ link.linkDesc }}</span>
                                 </button>
-                                <script>document.getElementById("{{project.projectName}}{{link.linkType}}").onclick=()=>window.open("{{link.linkURL}}")</script>
+                                <script>
+                                    document.getElementById("{{ link.linkType }}{{ project.projectId }}").onclick = () => window.open("{{ link.linkURL }}")
+                                </script>
                             {% endif %}
                         {% endfor %}
                         <span class="w-full"></span>
