General Work on Code Block Formatting + images

--- a/src/_includes/layouts/blog.njk
+++ b/src/_includes/layouts/blog.njk
@@ -11,7 +11,7 @@ layout: 'layouts/base.njk'
             </div>
         </a>
     </div>
-    <article className='prose prose-green dark:prose-invert block grow lg:max-w-[125ch]'>{{ content | safe }}</article>
+    <article className='prose prose-green dark:prose-invert grow lg:max-w-[125ch]'>{{ content | safe }}</article>
     <br/>
     <em
         className='prose prose-green dark:prose-invert mb-8 inline-flex self-center lg:flex'
