Minification + Really Stupid Formatting Issues

--- a/src/404.njk
+++ b/src/404.njk
@@ -1,15 +1,16 @@
 ---
+layout: layouts/base.njk
 permalink: 404.html
 ---
 
-<div classname='flex flex-col text-center align-center'>
-    <h1 classname='m-8 text-4xl'>oops...</h1>
+<div class='flex flex-col text-center align-center'>
+    <h1 class='m-8 text-4xl'>oops...</h1>
     <p>you seem to have navigated to a page that doesn&apos;t exist yet...</p>
     <p>
         you can&nbsp;
-        <a href='/' classname='text-primary underline'>go back to the home page</p>
+        <a href='/' class='text-primary underline'>go back to the home page</p>
     </p>
 </a>&nbsp;
-                or enjoy this funny meme i have:</p><div classname='m-8 flex'>
-<div classname='mx-auto'></div>
-<img src={imagesrc} alt='404 funny' width={400}/><div classname='mx-auto'></div></div>
+                or enjoy this funny meme i have:</p><div class='m-8 flex'>
+<div class='mx-auto'></div>
+<img src={imagesrc} alt='404 funny' width={400}/><div class='mx-auto'></div></div>
