--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -120,15 +120,10 @@
                 {{ content | safe }}
             </main>
             <div class="flex items-center mx-auto md:w-[80%]">
-                <footer class="mx-auto mb-4 block">
-                    <div data-slot="card" class="bg-card text-card-foreground flex-col gap-6 rounded-xl border py-6 shadow-sm flex">
+                <footer class="mx-auto my-4 block">
+                    <div data-slot="card" class="bg-card text-card-foreground flex-col gap-6 rounded-xl border shadow-sm flex">
                         <div data-slot="card-content" class="px-6 mx-auto mt-4 flex text-wrap">
-                            <pre class="text-wrap text-center">Made by Alex "FaceFTW" Westerman © 2021-2025 All Rights Reserved.
-<!-- -->Source code for this website is licensed under the MIT License
-<p class="prose prose-green dark:prose-invert inline text-wrap" xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><span property="dct:title" class="">The content of the "ref_cycle" blog</span> <!-- -->is licensed under<!-- --> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0" target="_blank" rel="license noopener noreferrer" class="inline-flex justify-center">CC BY-NC-SA 4.0</a></p>
-<!-- -->All projects mentioned are subject to their specific licenses and copyrights as designated by their owners<!-- -->
-
-<a class="text-gray-500 text-sm decoration-muted" href="/funny">super secret link</a></pre>
+                            <pre class="text-wrap text-center border-l-card">Made by Alex "FaceFTW" Westerman © 2021-2025 All Rights Reserved.<br>Source code for this website is licensed under the MIT License<br><p class="prose prose-green dark:prose-invert inline text-wrap text-muted-foreground" xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><span property="dct:title" class="">The content of the "ref_cycle" blog</span>&nbsp;is licensed under&nbsp;<a href="https://creativecommons.org/licenses/by-nc-sa/4.0" target="_blank" rel="license noopener noreferrer" class="inline-flex justify-center">CC BY-NC-SA 4.0</a></p><br>External projects mentioned are subject to their own licenses and copyrights<br><br><a class="text-gray-500 text-sm decoration-muted" href="/funny">super secret link</a></pre>
                         </div>
                     </div>
                 </footer>
