Cleanup some Blog Things

--- a/src/_includes/layouts/blog.njk
+++ b/src/_includes/layouts/blog.njk
@@ -11,14 +11,19 @@ layout: 'layouts/base.njk'
             </div>
         </a>
     </div>
-    <article class='prose prose-green dark:prose-invert grow lg:max-w-[125ch]'>{{ content | safe }}</article>
+    <article class='prose prose-green dark:prose-invert grow lg:max-w-[125ch]'>
+        <h1>{{ postTitle }}</h1>
+        <em>{{ excerpt }}</em>
+        {{ content | safe }}
+    </article>
     <br/>
     <em
         class='prose prose-green dark:prose-invert mb-8 inline-flex self-center lg:flex'
         xmlns:cc='http://creativecommons.org/ns#'
         xmlns:dct='http://purl.org/dc/terms/'>
         <span property='dct:title' class='mr-1'>
-            This post of <code>ref_cycle</code>&nbsp;
+            This post of
+            <code>ref_cycle</code>&nbsp;
         </span>
         is licensed under
         <a
